--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^4.10.3",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-gatsby-cloud": "^4.10.1",
     "gatsby-plugin-image": "^2.10.1",
     "gatsby-plugin-manifest": "^4.10.2",
     "gatsby-plugin-offline": "^5.10.2",
+    "gatsby-plugin-postcss": "^5.12.1",
+    "gatsby-plugin-preload-fonts": "^3.12.1",
     "gatsby-plugin-react-helmet": "^5.10.0",
-    "gatsby-plugin-sharp": "^4.10.2",
+    "gatsby-plugin-sharp": "^4.12.1",
     "gatsby-source-filesystem": "^4.10.1",
-    "gatsby-transformer-sharp": "^4.10.0",
+    "gatsby-transformer-sharp": "^4.12.1",
     "lottie-react": "^2.2.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
@@ -21,7 +24,10 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.6.0"
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.0",
+    "tailwindcss": "^3.0.24"
   },
   "keywords": [
     "gatsby"
@@ -34,7 +40,8 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "preload-fonts": "gatsby-preload-fonts"
   },
   "repository": {
     "type": "git",
