--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-gatsby-cloud": "^4.10.1",
     "gatsby-plugin-image": "^2.10.1",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^4.10.2",
     "gatsby-plugin-offline": "^5.10.2",
     "gatsby-plugin-postcss": "^5.12.1",
